[Composite]: Add to solution

--- a/Structural.Tests/Structural.Tests.csproj
+++ b/Structural.Tests/Structural.Tests.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Structural\Structural.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Composite\" />
+  </ItemGroup>
+
 </Project>
