--- a/Creational.Tests/Creational.Tests.csproj
+++ b/Creational.Tests/Creational.Tests.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Creational\Creational.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AbstractFactory\" />
+  </ItemGroup>
+
 </Project>
